- remove dist - update webpack - update render documentation

--- a/community.html
+++ b/community.html
@@ -11,7 +11,7 @@
     <section class="header-section">
         <header>
             <div class="content-wrap">
-                <a href="/" class="nav-logo">gobetween</a>
+                <a href="./index.html" class="nav-logo">gobetween</a>
                 <div class="nav-mobile__sandwich">
                     <input type="checkbox" id="mobile-sandwich" />
                     <label for="mobile-sandwich" class="mobile-sandwich">
@@ -22,9 +22,9 @@
                 </div>
                 <nav>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="/documentation.html" class="nav-link">Documetation</a></li>
-                        <li class="nav-item"><a href="/community.html" class="nav-link active">Community</a></li>
-                        <li class="nav-item"><a href="/downloads.html" class="nav-link">Downloads</a></li>
+                        <li class="nav-item"><a href="./documentation.html" class="nav-link">Documetation</a></li>
+                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
+                        <li class="nav-item"><a href="./downloads.html" class="nav-link">Downloads</a></li>
                     </ul>
                 </nav>
             </div>
@@ -143,6 +143,6 @@
         <br />
         <span>Copyright 2016</span>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
