--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="particles-js"></div>
         <header>
             <div class="content-wrap">
-                <a href="/" class="nav-logo">gobetween</a>
+                <a href="./index.html" class="nav-logo">gobetween</a>
                 <div class="nav-mobile__sandwich">
                     <input type="checkbox" id="mobile-sandwich" />
                     <label for="mobile-sandwich" class="mobile-sandwich">
@@ -23,9 +23,9 @@
                 </div>
                 <nav>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="/documentation.html" class="nav-link">Documetation</a></li>
-                        <li class="nav-item"><a href="/community.html" class="nav-link">Community</a></li>
-                        <li class="nav-item"><a href="/downloads.html" class="nav-link">Downloads</a></li>
+                        <li class="nav-item"><a href="./documentation.html" class="nav-link">Documetation</a></li>
+                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
+                        <li class="nav-item"><a href="./downloads.html" class="nav-link">Downloads</a></li>
                     </ul>
                 </nav>
             </div>
@@ -46,6 +46,7 @@
     <section class="how-it-works">
         <div class="content-wrap">
             <h1 class="section-title">How it works</h1>
+            <div>Some text which would like Yaroslaw</div>
             <img src="i/svg/Sheme.svg" alt="" />
         </div>
     </section>
@@ -123,6 +124,6 @@
         <br />
         <span>Copyright 2016</span>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
