Added code highlight to docs

--- a/documentation.html
+++ b/documentation.html
@@ -8,6 +8,16 @@
         and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/github-gist.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+    <script>
+        hljs.registerLanguage('toml', hljs.getLanguage('ini'));
+        hljs.configure({
+          classPrefix: 'lang-'
+        });
+    </script>
+
 </head>
 <body>
 <section class="header-section">
