Updated texts; added better photos

--- a/community.html
+++ b/community.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gobetween</title>
+    <title>gobetween - community</title>
+    <meta content="gobetween is free, open-source, modern & minimalistic L4 load balancer 
+        and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -69,24 +71,26 @@
         <div class="content-wrap">
             <h1 class="section-title">
                 People
-                <br />
-                <span class="section-sub-title">The following people are behing gobetween. Each of them contribute to gobetween in some way:</span>
+                <br /><br/>
+                <span class="section-sub-title">The following people are behing gobetween. Each of them contribute to gobetween in some great way:</span>
             </h1>
             <div class="community-people__wrap">
                 <div class="community-person">
                     <div class="community-avatar">
-                        <img src="i/avatar/Yar.png" alt="" />
+                        <img src="i/avatar/Yaroslav.jpg" alt="" />
                     </div>
                     <h3 class="community-title">Yaroslav Pogrebnyak</h3>
                     <div class="community-desc">
+                        creator &amp; maintainer
                     </div>
                 </div>
                 <div class="community-person">
                     <div class="community-avatar">
-                        <img src="i/avatar/nik.png" alt="" />
+                        <img src="i/avatar/nick.jpg" alt="" />
                     </div>
                     <h3 class="community-title">Nick Doikov</h3>
                     <div class="community-desc">
+                        co-creator, devops &amp; evangelist
                     </div>
                 </div>
                 <div class="community-person">
@@ -95,6 +99,7 @@
                     </div>
                     <h3 class="community-title">Ievgen Ponomarenko</h3>
                     <div class="community-desc">
+                        co-creator &amp; core contributor
                     </div>
                 </div>
                 <div class="community-person">
@@ -103,6 +108,7 @@
                     </div>
                     <h3 class="community-title">Illarion Kovalchuk</h3>
                     <div class="community-desc">
+                        core contributor
                     </div>
                 </div>
             </div>
@@ -112,7 +118,7 @@
     <section class="thanks">
         <div class="content-wrap">
             <h1 class="section-title">
-                Thanks
+                Special Thanks
             </h1>
             <div class="community-people__wrap">
                 <div class="community-person">
@@ -130,7 +136,7 @@
                     </div>
                     <h3 class="community-title">Pavel Mashchenko</h3>
                     <div class="community-desc">
-                        website creation
+                        website markup/programming
                     </div>
                 </div>
             </div>
