--- a/documentation.html
+++ b/documentation.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gobetween</title>
+    <title>gobetween - downloads</title>
+    <meta content="gobetween is free, open-source, modern & minimalistic L4 load balancer 
+        and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
