--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gobetween</title>
+    <title>gobetween - modern & minimalistic load balancer for the cloud era</title>
+    <meta content="gobetween is free, open-source, modern & minimalistic L4 load balancer 
+        and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -36,7 +38,7 @@
                 <h3 class="main-sub__title">gobetween is free, open-source, modern & minimalistic L4 <br/> load balancer 
                     and reverse proxy for the Cloud era</h3>
                 <div class="main-buttons mb-m-30 mr-l-20">
-                    <a href="documentation.html" class="btn btn-primary">Get Started</a>
+                    <a href="documentation.html" class="btn btn-primary">Get Started!</a>
                 </div>
                 <div class="main-buttons ml-l-20">
                     <a href="downloads.html" class="btn btn-primary">Downloads</a>
@@ -46,8 +48,9 @@
     </section>
     <section class="how-it-works">
         <div class="content-wrap">
-            <h1 class="section-title">How it works</h1>
-            <div>Some text which would like Yaroslaw</div>
+            <h1 class="section-title">gobetween acts as adaa</h1>
+            <div>Plays nice with Docker, Docker Swarm, Consul, and any custom dynamic environment!</div>
+            <br/>
             <img src="i/svg/Sheme.svg" alt="" />
         </div>
     </section>
@@ -65,7 +68,7 @@
                     <div class="feature-desc">
                         Blazing fast TCP load balancing suitable for high-load systems.
                     </div>
-                    <a href="documentation.html" class="feature-link">Read More</a>
+                    <a href="documentation.html#Introduction" class="feature-link">Read More</a>
                 </div>
                 <div class="feature-item">
                     <div class="feature-img">
@@ -77,7 +80,7 @@
                     <div class="feature-desc">
                         Define load balancing backends as static list, query DNS SRV server, docker/swarm, consul, text/json, or use custom script.
                     </div>
-                    <a href="documentation.html" class="feature-link">Read More</a>
+                    <a href="documentation.html#Discovery" class="feature-link">Read More</a>
                 </div>
                 <div class="feature-item">
                     <div class="feature-img">
@@ -89,7 +92,7 @@
                     <div class="feature-desc">
                         Use build-in tcp ping healthcheck or define your own in custom scripts.
                     </div>
-                    <a href="documentation.html" class="feature-link">Read More</a>
+                    <a href="documentation.html#Healthchecks" class="feature-link">Read More</a>
                 </div>
                 <div class="feature-item">
                     <div class="feature-img">
@@ -101,7 +104,7 @@
                     <div class="feature-desc">
                         Only one all-sufficient binary executable + clear TOML config file.
                     </div>
-                    <a href="documentation.html" class="feature-link">Read More</a>
+                    <a href="documentation.html#Installation" class="feature-link">Read More</a>
                 </div>
                 <div class="feature-item">
                     <div class="feature-img">
@@ -113,11 +116,11 @@
                     <div class="feature-desc">
                         Works on Linux, Windows &amp; Darwin.
                     </div>
-                    <a href="documentation.html" class="feature-link">Read More</a>
+                    <a href="downloads.html" class="feature-link">Read More</a>
                 </div>
             </div>
             <br />
-            <a href="documentation.html" class="btn btn-primary">Get Started</a>
+            <a href="documentation.html#Introduction" class="btn btn-primary">Read the Docs!</a>
         </div>
     </section>
     <footer>
