--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gobetween</title>
+    <title>gobetween - downloads</title>
+    <meta content="gobetween is free, open-source, modern & minimalistic L4 load balancer 
+        and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -34,6 +36,7 @@
     <div class="content-wrap">
         <h1 class="section-title">
             Downloads
+            <br/>
             <br/>
             <span class="section-sub-title">Current version: <span class="current-version">v0.3.0</span></span>
         </h1>
@@ -102,7 +105,7 @@
                     <h3 class="download-title">
                         Source Code
                     </h3>
-                    <a href="https://github.com/yyyar/gobetween" class="download-link">source</a>
+                    <a href="https://github.com/yyyar/gobetween" class="download-link">yyyar/gobetween</a>
                 </div>
             </div>
         </div>
