Removed wrong texts on index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
     <section class="how-it-works">
         <div class="content-wrap">
-            <h1 class="section-title">gobetween acts as adaa</h1>
+            <h1 class="section-title">gobetween</h1>
             <div>Plays nice with Docker, Docker Swarm, Consul, and any custom dynamic environment!</div>
             <br/>
             <img src="i/svg/Sheme.svg" alt="" />
