Layout fixes; Text fixes; Sidebar docs improvements

--- a/community.html
+++ b/community.html
@@ -25,8 +25,8 @@
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="./documentation.html" class="nav-link">Documetation</a></li>
-                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
                         <li class="nav-item"><a href="./downloads.html" class="nav-link">Downloads</a></li>
+                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
                     </ul>
                 </nav>
             </div>
@@ -44,25 +44,28 @@
             </h1>
             <div class="community-item__wrap">
                 <div class="community-item">
-                    <h3 class="community-title">Github</h3>
+                    <h3 class="community-title">
+                        <a target="_blank" class="community-link" href="https://github.com/yyyar/gobetween">Github</a>
+                    </h3>
                     <div class="community-desc">
                         All development happens here
                     </div>
-                    <a href="https://github.com/yyyar/gobetween" target="_blank" class="community-link">Open</a>
                 </div>
                 <div class="community-item">
-                    <h3 class="community-title">Github Issues</h3>
+                    <h3 class="community-title">
+                        <a target="_blank" class="community-link" href="https://github.com/yyyar/gobetween/issues">Github Issues</a>
+                    </h3>
                     <div class="community-desc">
                         Issue tracking, bugs reports, new features requests
                     </div>
-                    <a href="https://github.com/yyyar/gobetween/issues" target="_blank" class="community-link">Open</a>
                 </div>
                 <div class="community-item">
-                    <h3 class="community-title">Gitter</h3>
+                    <h3 class="community-title">
+                        <a target="_blank" class="community-link" href="https://gitter.im/yyyar/gobetween">Gitter</a>
+                    </h3>
                     <div class="community-desc">
                         General questions, answers and discussions
                     </div>
-                    <a href="https://gitter.im/yyyar/gobetween" class="community-link">Open</a>
                 </div>
             </div>
         </div>
@@ -79,7 +82,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/Yaroslav.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Yaroslav Pogrebnyak</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="http://pogrebnyak.info/">Yaroslav Pogrebnyak</a>
+                    </h3>
                     <div class="community-desc">
                         creator &amp; maintainer
                     </div>
@@ -88,7 +93,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/nick.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Nick Doikov</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="#">Nick Doikov</a>
+                    </h3>
                     <div class="community-desc">
                         co-creator, devops &amp; evangelist
                     </div>
@@ -97,7 +104,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/ievgen.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Ievgen Ponomarenko</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="#">Ievgen Ponomarenko</a>
+                    </h3>
                     <div class="community-desc">
                         co-creator &amp; core contributor
                     </div>
@@ -106,7 +115,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/illarion.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Illarion Kovalchuk</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="#">Illarion Kovalchuk</a>
+                    </h3>
                     <div class="community-desc">
                         core contributor
                     </div>
@@ -125,7 +136,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/Max.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Max Demchenko</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="#">Max Demchenko</a>
+                    </h3>
                         logo &amp; website design
                     <div class="community-desc">
                     </div>
@@ -134,7 +147,9 @@
                     <div class="community-avatar">
                         <img src="i/avatar/Pasha.jpg" alt="" />
                     </div>
-                    <h3 class="community-title">Pavel Mashchenko</h3>
+                    <h3 class="community-title">
+                        <a class="community-link" target="_blank" href="#">Pavel Mashchenko</a>
+                    </h3>
                     <div class="community-desc">
                         website markup/programming
                     </div>
