--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="./documentation.html" class="nav-link">Documetation</a></li>
-                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
                         <li class="nav-item"><a href="./downloads.html" class="nav-link">Downloads</a></li>
+                        <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,7 +38,7 @@
                 <h3 class="main-sub__title">gobetween is free, open-source, modern & minimalistic L4 <br/> load balancer 
                     and reverse proxy for the Cloud era</h3>
                 <div class="main-buttons mb-m-30 mr-l-20">
-                    <a href="documentation.html" class="btn btn-primary">Get Started!</a>
+                    <a href="documentation.html" class="btn btn-primary">Get Started</a>
                 </div>
                 <div class="main-buttons ml-l-20">
                     <a href="downloads.html" class="btn btn-primary">Downloads</a>
@@ -48,7 +48,7 @@
     </section>
     <section class="how-it-works">
         <div class="content-wrap">
-            <h1 class="section-title">gobetween</h1>
+            <h1 class="section-title">How it Works</h1>
             <div>Plays nice with Docker, Docker Swarm, Consul, and any custom dynamic environment!</div>
             <br/>
             <img src="i/svg/Sheme.svg" alt="" />
@@ -66,7 +66,7 @@
                     </div>
                     <h3 class="feature-title">L4 Load Balancing</h3>
                     <div class="feature-desc">
-                        Blazing fast TCP load balancing suitable for high-load systems.
+                        High-performance TCP, TLS &amp; UDP load balancing suitable for high-load systems
                     </div>
                     <a href="documentation.html#Introduction" class="feature-link">Read More</a>
                 </div>
@@ -78,7 +78,7 @@
                     </div>
                     <h3 class="feature-title">Powerful Backends Discovery</h3>
                     <div class="feature-desc">
-                        Define load balancing backends as static list, query DNS SRV server, docker/swarm, consul, text/json, or use custom script.
+                        Static file, DNS SRV, docker/swarm, consul, text/json, or custom script
                     </div>
                     <a href="documentation.html#Discovery" class="feature-link">Read More</a>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                     <h3 class="feature-title">Flexible Healthchecks</h3>
                     <div class="feature-desc">
-                        Use build-in tcp ping healthcheck or define your own in custom scripts.
+                        Build-in tcp ping for simple healthchecks + custom scripts for advanced
                     </div>
                     <a href="documentation.html#Healthchecks" class="feature-link">Read More</a>
                 </div>
@@ -102,7 +102,7 @@
                     </div>
                     <h3 class="feature-title">Single Binary Distribution</h3>
                     <div class="feature-desc">
-                        Only one all-sufficient binary executable + clear TOML config file.
+                        One all-sufficient binary executable, plus one toml/json config file
                     </div>
                     <a href="documentation.html#Installation" class="feature-link">Read More</a>
                 </div>
@@ -114,10 +114,23 @@
                     </div>
                     <h3 class="feature-title">Multi-Platform</h3>
                     <div class="feature-desc">
-                        Works on Linux, Windows &amp; Darwin.
+                        Works on Linux, Windows &amp; Darwin
                     </div>
                     <a href="downloads.html" class="feature-link">Read More</a>
                 </div>
+               <div class="feature-item">
+                    <div class="feature-img">
+                        <img class="img-dots img-dots__left" src="i/svg/Dots_1.svg" alt="">
+                        <img src="i/svg/Single_Binary.svg" alt="icon">
+                        <img class="img-dots img-dots__right" src="i/svg/Dots_2.svg" alt="">
+                    </div>
+                    <h3 class="feature-title">Full-featured REST API</h3>
+                    <div class="feature-desc">
+                        Servers configuration, statistics &amp; management
+                    </div>
+                    <a href="documentation.html#REST-API" class="feature-link">Read More</a>
+                </div>
+
             </div>
             <br />
             <a href="documentation.html#Introduction" class="btn btn-primary">Read the Docs!</a>
