--- a/community.html
+++ b/community.html
@@ -94,7 +94,7 @@
                         <img src="i/avatar/nick.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="#">Nick Doikov</a>
+                        <a class="community-link" target="_blank" href="https://www.linkedin.com/in/nick-doikov-a10b6945">Nick Doikov</a>
                     </h3>
                     <div class="community-desc">
                         co-creator, devops &amp; evangelist
@@ -105,7 +105,7 @@
                         <img src="i/avatar/ievgen.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="#">Ievgen Ponomarenko</a>
+                        <a class="community-link" target="_blank" href="">Ievgen Ponomarenko</a>
                     </h3>
                     <div class="community-desc">
                         co-creator &amp; core contributor
@@ -116,7 +116,7 @@
                         <img src="i/avatar/illarion.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="#">Illarion Kovalchuk</a>
+                        <a class="community-link" target="_blank" href="http://illarion-kovalchuk.info/">Illarion Kovalchuk</a>
                     </h3>
                     <div class="community-desc">
                         core contributor
@@ -137,7 +137,7 @@
                         <img src="i/avatar/Max.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="#">Max Demchenko</a>
+                        <a class="community-link" target="_blank" href="https://ua.linkedin.com/in/max-demchenko-116170112">Max Demchenko</a>
                     </h3>
                         logo &amp; website design
                     <div class="community-desc">
@@ -148,7 +148,7 @@
                         <img src="i/avatar/Pasha.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="#">Pavel Mashchenko</a>
+                        <a class="community-link" target="_blank" href="">Pavel Mashchenko</a>
                     </h3>
                     <div class="community-desc">
                         website markup/programming
