- fix css responsive

--- a/community.html
+++ b/community.html
@@ -24,7 +24,7 @@
                 </div>
                 <nav>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="./documentation.html" class="nav-link">Documetation</a></li>
+                        <li class="nav-item"><a href="./documentation.html" class="nav-link">Documentation</a></li>
                         <li class="nav-item"><a href="./downloads.html" class="nav-link">Downloads</a></li>
                         <li class="nav-item"><a href="./community.html" class="nav-link">Community</a></li>
                     </ul>
@@ -148,7 +148,7 @@
                         <img src="i/avatar/Pasha.jpg" alt="" />
                     </div>
                     <h3 class="community-title">
-                        <a class="community-link" target="_blank" href="">Pavel Mashchenko</a>
+                        <a class="community-link" target="_blank" href="https://www.linkedin.com/in/pavel-mashchenko-b9981791">Pavel Mashchenko</a>
                     </h3>
                     <div class="community-desc">
                         website markup/programming
