--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/svg" href="favicons/favicon.svg" sizes="any">
 </head>
 <body>
     <section class="main-section bg-gradient">
