--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="favicons/favicon.png" sizes="any">
+
+    <meta property="og:title" content="gobetween - modern & minimalistic L4 load balancer" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="src/i/logo.png" />
+    <meta property="og:description" content="gobetween is free, open-source, modern & minimalistic L4 load balancer 
+        and reverse proxy for the Cloud era. Plays nice with Docker, Consul and any custom dymanic environment." />
 </head>
 <body>
     <section class="main-section bg-gradient">
