--- a/community.html
+++ b/community.html
@@ -8,7 +8,7 @@
         and reverse proxy for the Cloud era" name="description" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/png" href="i/favicons/favicon.png" sizes="any">
+    <link rel="icon" type="image/png" href="i/favicons/favicon.ico" sizes="any">
 </head>
 <body>
     <section class="header-section">
