- fix issue from google doc file

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
     </section>
     <section class="how-it-works">
         <div class="content-wrap">
-            <h1 class="section-title">How it Works</h1>
-            <div>Plays nice with Docker, Docker Swarm, Consul, and any custom dynamic environment!</div>
-            <br/>
+            <h1 class="section-title">
+                How it Works
+                <br />
+                <span class="section-sub-title">Plays nice with Docker, Docker Swarm, Consul, and any custom dynamic environment!</span>
+            </h1>
             <img src="i/svg/Sheme.svg" alt="" />
         </div>
     </section>
