Fixed bad english on community page; added dependency on stylus

--- a/community.html
+++ b/community.html
@@ -40,7 +40,7 @@
                 <br />
                 <span class="section-sub-title">
                     gobetween
-                    is a young project with growing community. You're welcome to join and contribute! <br/> Here are a list of useful links:</span>
+                    is a young project with growing community. You're welcome to join and contribute! <br/> Here is the list of useful links:</span>
             </h1>
             <div class="community-item__wrap">
                 <div class="community-item">
@@ -75,7 +75,7 @@
             <h1 class="section-title">
                 People
                 <br />
-                <span class="section-sub-title">The following people are behing gobetween. Each of them contribute to gobetween in some great way:</span>
+                <span class="section-sub-title">The following people are behing gobetween. Each of them contributes to gobetween in some great way:</span>
             </h1>
             <div class="community-people__wrap">
                 <div class="community-person">
