Fixed bad english on main page: s/build-in/build-in/

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <h3 class="feature-title">Flexible Healthchecks</h3>
                     <div class="feature-desc">
-                        Build-in tcp ping for simple healthchecks + custom scripts for advanced
+                        Built-in tcp ping for simple healthchecks + custom scripts for advanced ones
                     </div>
                     <a href="documentation.html#Healthchecks" class="feature-link">Read More</a>
                 </div>
