--- a/downloads.html
+++ b/downloads.html
@@ -130,7 +130,7 @@
 <footer>
     <a href="https://github.com/yyyar/gobetween" target="_blank" class="github-link"></a>
     <br/>
-    <span>Copyright &copy; 2016 gobetween contributors</span>
+    <span>Copyright &copy; 2016-2017 gobetween contributors</span>
 </footer>
 <script src="./js/main.js"></script>
 </body>
