--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
         <div class="main-content">
             <div class="content-wrap">
-                <h1 class="main-title">Make Your Load Balancing Great Again!</h1>
+                <h1 class="main-title">Beyond the Clouds 🌧</h1>
                 <h3 class="main-sub__title">gobetween is free, open-source, modern & minimalistic L4 <br/> load balancer 
                     and reverse proxy for the Cloud era</h3>
                 <div class="main-buttons mb-m-30 mr-l-20">
