Updated website and wiki docs

--- a/community.html
+++ b/community.html
@@ -61,6 +61,7 @@
                 </div>
                 <div class="community-item">
                     <h3 class="community-title">
+                        <a target="_blank" class="community-link" href="https://t.me/joinchat/GdlUlg_gRfchk1BORU82PA">Telegram</a> / 
                         <a target="_blank" class="community-link" href="https://gitter.im/yyyar/gobetween">Gitter</a>
                     </h3>
                     <div class="community-desc">
@@ -119,7 +120,7 @@
                         <a class="community-link" target="_blank" href="http://illarion-kovalchuk.info/">Illarion Kovalchuk</a>
                     </h3>
                     <div class="community-desc">
-                        core contributor
+                        core contributor &amp; maintainer
                     </div>
                 </div>
             </div>
@@ -161,7 +162,7 @@
     <footer>
             <a href="https://github.com/yyyar/gobetween" target="_blank" class="github-link"></a>
         <br />
-    <span>Copyright &copy; 2016-2017 gobetween contributors</span>
+    <span>Copyright &copy; 2016-2018 gobetween contributors</span>
     </footer>
     <script src="./js/main.js"></script>
 </body>
