--- a/downloads.html
+++ b/downloads.html
@@ -38,7 +38,7 @@
         <h1 class="section-title">
             Downloads
             <br/>
-            <span class="section-sub-title">Current version: <span class="current-version">v0.3.0</span></span>
+            <span class="section-sub-title">Current version: <span class="current-version">loading...</span></span>
         </h1>
         <div class="download-item__wrap">
             <div class="download-item">
@@ -130,7 +130,7 @@
 <footer>
     <a href="https://github.com/yyyar/gobetween" target="_blank" class="github-link"></a>
     <br/>
-    <span>Copyright &copy; 2016-2017 gobetween contributors</span>
+    <span>Copyright &copy; 2016-2018 gobetween contributors</span>
 </footer>
 <script src="./js/main.js"></script>
 </body>
