--- a/documentation.html
+++ b/documentation.html
@@ -72,7 +72,7 @@
             </ul>
         </aside>
         <div class="documentation-content__wrap">
-            <h3 class="documentation-content-title">fooooo</h3>
+            <h3 class="documentation-content-title">loading...</h3>
             <div class="documentation-content">
 
             </div>
@@ -85,7 +85,7 @@
 <footer>
     <a href="https://github.com/yyyar/gobetween" target="_blank" class="github-link"></a>
     <br/>
-    <span>Copyright &copy; 2016-2017 gobetween contributors</span>
+    <span>Copyright &copy; 2016-2018 gobetween contributors</span>
 </footer>
 <script src="./js/main.js"></script>
 </body>
