Added commiters to community page (excluding original authors)

--- a/community.html
+++ b/community.html
@@ -159,6 +159,20 @@
         </div>
     </section>
 
+    <section class="community-people">
+        <div class="content-wrap">
+            <h1 class="section-title">
+                Commiters
+                <br />
+                <span class="section-sub-title">
+
+                    The following people helped gobetween by commiting to the source code:<br/><br/>
+
+                    <pre style="font-size:20px; font-weight: bold" id="community-contributors"></pre>
+                </span>
+            </h1>
+        </div>
+    </section>
     <footer>
             <a href="https://github.com/yyyar/gobetween" target="_blank" class="github-link"></a>
         <br />
