Updated wiki and downloads

--- a/downloads.html
+++ b/downloads.html
@@ -97,6 +97,19 @@
                     <a href="https://hub.docker.com/r/yyyar/gobetween/" class="download-link">yyyar/gobetween</a>
                 </div>
             </div>
+
+            <div class="download-item">
+                <div class="download-icon">
+                    <img src="i/snap.png" alt="icon"/>
+                </div>
+                <div class="download-item__content">
+                    <h3 class="download-title">
+                        Snap Package
+                    </h3>
+                    <a href="https://snapcraft.io/gobetween" class="download-link">gobetween</a>
+                </div>
+            </div>
+
             <div class="download-item">
                 <div class="download-icon">
                     <img src="i/svg/Source_code.svg" alt="icon"/>
