--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="documentation.html" class="btn btn-primary">Get Started</a>
                 </div>
                 <div class="main-buttons ml-l-20">
-                    <a href="downloads.html" class="btn btn-primary">Downloads</a>
+                    <a href="downloads.html" class="btn btn-primary">Installation</a>
                 </div>
             </div>
         </div>
